[gd_scene load_steps=8 format=3 uid="uid://r6cc2m204dqw"]

[ext_resource type="Theme" uid="uid://b4yu237ua3sml" path="res://Theme_Game_Min.tres" id="1"]
[ext_resource type="Script" path="res://menus/HBHovereableButton.gd" id="2"]
[ext_resource type="Script" path="res://menus/HBSimpleMenu.gd" id="3"]
[ext_resource type="Script" path="res://menus/HBConfirmationWindow.gd" id="4"]
[ext_resource type="StyleBox" uid="uid://cp7yh4stt825r" path="res://styles/PanelStyleTransparentIconHover.tres" id="5"]
[ext_resource type="StyleBox" uid="uid://b21324ii6ky3l" path="res://styles/PanelStyleTransparentIcon.tres" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
content_margin_left = 25.0
content_margin_right = 0.0
bg_color = Color(0.19, 0.07, 0.3, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.592157, 0.239216, 0.94902, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 20
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 10

[node name="HBConfirmationWindow" type="CenterContainer"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("1")
script = ExtResource("4")

[node name="Panel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_top = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TextLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Are you sure you want to do this?"
horizontal_alignment = 1
autowrap_mode = 3

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 2
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("3")

[node name="AcceptButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("5")
theme_override_styles/normal = ExtResource("6")
text = "Yes"
script = ExtResource("2")

[node name="CancelButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
theme_override_styles/hover = ExtResource("5")
theme_override_styles/pressed = ExtResource("5")
theme_override_styles/normal = ExtResource("6")
text = "No"
script = ExtResource("2")
